--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,6 +25,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2.3.1
 
+    - name: debug
+      run: ls -la .
+
+
     - name: Cache global ~/.stack
       id:   stack-global
       uses: actions/cache@v2
